main/default/objects/Email_Settings__c/Email_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Email_Settings</label>
</CustomObject>