main/default/objects/Email_Settings__c/fields/Default_Org_Wide_Email_Id__c.field-meta.xml
<CustomField>
    <fullName>Default_Org_Wide_Email_Id__c</fullName>
    <label>Default Org Wide Email Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>