main/default/objects/Email_Settings__c/fields/Email_Disabled_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Email_Disabled_Error_Message__c</fullName>
    <label>Email Disabled Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>