main/default/objects/Email_Settings__c/fields/Email_Transaction_Limit_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Email_Transaction_Limit_Error_Message__c</fullName>
    <label>Email Transaction Limit Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>