main/default/objects/Email_Settings__c/fields/Max_Email_To_Number__c.field-meta.xml
<CustomField>
    <fullName>Max_Email_To_Number__c</fullName>
    <label>Max Email To Number</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>